<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewLocalPort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/localPort"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextLocalPort"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/localPortNum" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewIp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.95"
            android:text="@string/ip_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextIp"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/destIP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPorta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextPorta"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/destPort" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="@string/send" />

        <EditText
            android:id="@+id/editTextPayload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/sendContent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="Clear" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload_recv"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/RecvText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:singleLine="false" >

        </EditText>

    </ScrollView>

</LinearLayout>